2025-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/float.h,
	  device/lib/incl.mk,
	  support/regression/tests/bitintfromfloat.c.in,
	  device/lib/_fs2slonglong.c,
	  device/lib/_fs2ulonglong.c:
	  Fix third part of bug #3719.
	* debugger/mcs51/sdcdb.h,
	  debugger/mcs51/sdcdb.c,
	  debugger/mcs51/symtab.c:
	  Fix bug #3823.
	* src/z80/gen.c:
	  Fix bug #3854.

2025-08-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peep.c,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/__mulsint2slong.s,
	  device/lib/z80/__muluint2slong.s,
	  support/regression/tests/coremark.c.in,
	  support/regression/tests/muldiv.c.in:
	  Fix bug #3852.
	* src/pdk/gen.c,
	  support/regression/tests/bitintfromfloat.c.in:
	  Fix a pdk codegen issue for casts from int to _BitInt of width > 8, < 16 bits if both operands' least-significant byte is allocated to register a, part of bug #3719.

2025-08-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  support/regression/tests/bitinttofloat.c.in,
	  support/regression/tests/bitintfromfloat.c.in:
	  Fix bug #3718, partially fix bug #3719.

2025-08-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix a regression caused by yesterday's fix for bug #3855.

2025-08-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/support/regression/tests/rabbit.c:
	  Enable test for f8, since it now passes.
	* src/SDCCopt.c,
	  support/regression/tests/bitintarith.c.in,
	  support/regression/tests/bug-3855.c:
	  Fix bug #3855.
	* src/z80/gen.c,
	  support/regression/tests/bug-3850.c:
	  Fix bug #3850.

2025-07-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCC.lex,
	  doc/sdccman.lyx:
	  #pragma max_allocs_per_node.

2025-07-15 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/mcs51/at89x51.h:
	  Fix typo in header, see bug #3861.

2025-07-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/doc/MCS51_named.svg: